--- a/static/css/principal.css
+++ b/static/css/principal.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -45,7 +45,8 @@ label {
     color: #333;
 }
 
-input, textarea {
+input,
+textarea {
     padding: 10px;
     margin-bottom: 15px;
     font-size: 1rem;
@@ -54,7 +55,8 @@ input, textarea {
     transition: border-color 0.3s ease;
 }
 
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
     border-color: #faafee;
     outline: none;
 }
@@ -79,4 +81,34 @@ button:hover {
     background-color: #f99bee;
 }
 
+h2{
+    margin-top: 20px;
+
+}
+
+.comentario {
+    background-color: #ffe8fc;
+    padding: 20px;
+    border: 1px solid #ebebeb;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.comentario .nome {
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.comentario .data {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+.comentario .texto {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
 
