--- a/static/css/principal.css
+++ b/static/css/principal.css
@@ -112,3 +112,26 @@ h2{
     margin-bottom: 20px;
 }
 
+.material-symbols-outlined {
+    font-size: 24px; 
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    color: #000; 
+    margin: 5px;
+}
+
+.material-symbols-outlined:hover {
+    color: #4caf50; 
+}
+
+.comentario-botoes {
+    display: flex; 
+    align-items: center; 
+    gap: 10px; 
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer; 
+}
