--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comentario</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/principal.css') }}">
+    <!-- Link para o arquivo CSS externo -->
+    <link rel="stylesheet" href="/static/css/principal.css">
+
+    <!-- Importação corrigida para os ícones do Google Material Symbols -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body>
 
@@ -14,26 +18,39 @@
     </header>
 
     <main>
-    <form action="/post/mensagem" method="POST">
-        <label for="nome-usuario">Insira seu nome</label>
-        <input type="text" id="nome-usuario" name="nome-usuario" placeholder="digite seu nome">
+        <form action="/post/mensagem" method="POST">
+            <label for="nome-usuario">Insira seu nome</label>
+            <input type="text" id="nome-usuario" name="nome-usuario" placeholder="digite seu nome">
 
-        <label for="comentario">Insira um comentario</label>
-        <textarea id="comentario" name="comentario" placeholder="digite seu comentario"></textarea>
-        <button type="submit">Enviar</button>
-    </form>
+            <label for="comentario">Insira um comentario</label>
+            <textarea id="comentario" name="comentario" placeholder="digite seu comentario"></textarea>
+            <button type="submit">Enviar</button>
+        </form>
 
-    <h2>Comentarios:</h2>
+        <h2>Comentarios:</h2>
 
-    {% for mensagem in mensagens %}
-    <div class="comentario">
-        
-        <div class="nome">{{mensagem.usuario}}</div>
-        <div class="data">{{mensagem.data_hora}}</div>
-        <div class="texto">{{mensagem.mensagem}}</div>
-    </div>
+        {% for mensagem in mensagens %}
+        <div class="comentario">
+            
+            <div class="nome">{{mensagem.usuario}}</div>
+            <div class="data">{{mensagem.data_hora}}</div>
+            <div class="texto">{{mensagem.mensagem}}</div>
 
-    {% endfor %}
-</main>
+            <div class="comentario-botoes">
+               
+                <a href="/delete/mensagem/{{mensagem.cod_comentario}}" ><span class="deletar-mensagem">deletar</span></a>
+
+               
+                <a href="/" class="material-symbols-outlined"> thumb_up </a> <span>{{mensagem.curtidas}}</span>
+
+                <a href="#" class="material-symbols-outlined">
+                    thumb_down
+                </a>
+            </div>
+
+        </div>
+        {% endfor %}
+    </main>
+
 </body>
 </html>
