--- a/static/css/principal.css
+++ b/static/css/principal.css
@@ -13,7 +13,8 @@ body {
 }
 
 header {
-    text-align: center;
+    display: flex;
+    position: relative; 
     margin-bottom: 20px;
 }
 
@@ -22,6 +23,15 @@ header h1 {
     color: #333;
     text-transform: uppercase;
     letter-spacing: 1px;
+    text-align: center;
+    width: 100%; 
+}
+
+header span {
+    position: absolute; 
+    right: 0; 
+    top: 50%; 
+    transform: translateY(-50%); 
 }
 
 main {
