--- a/templates/principal.html
+++ b/templates/principal.html
@@ -15,6 +15,8 @@
 
     <header>
         <h1>PAGINA DE COMENTARIO MORTAL</h1>
+
+        <span><a href="/pagina-de-login">Fazer login</a></span>
     </header>
 
     <main>
