--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
 
-    <link rel="stylesheet" href="/static/css/cadastro.css">
+    <link rel="stylesheet" href="/static/css/login.css">
 </head>
 <body>
     <header>PAGINA DE LOGIN SINISTRO</header>
@@ -22,7 +22,9 @@
             <label for="">Insira sua senha</label>
             <input type="text" placeholder="insira sua senha">
 
-            <span>Ainda não tem uma conta? <a href="">fazer cadastro</a></span>
+            <button type="button" onclick="alert('Login realizado!')"><a href="/">Fazer Login</a></button>
+
+            <span>Ainda não tem uma conta? <a href="/pagina-de-cadastro">fazer cadastro</a></span>
         </form>
     </main>
 </body>
