--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -20,7 +20,7 @@
             <input type="text" placeholder="cadastre seu nome" name="cadastro-nome">
 
             <label for="cadastro-senha">Insira sua senha</label>
-            <input type="text" placeholder="insira sua senha" name="cadastro-senha">
+            <input type="password" placeholder="insira sua senha" name="cadastro-senha">
 
             <button type="submit" onclick="alert('Cadastro realizado!')"><a href="/">Cadastrar</a></button>
 
@@ -29,3 +29,4 @@
     </main>
 </body>
 </html>
+
