--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -22,7 +22,7 @@
             <label for="cadastro-senha">Insira sua senha</label>
             <input type="password" placeholder="insira sua senha" name="cadastro-senha">
 
-            <button type="submit" onclick="alert('Cadastro realizado!')"><a href="/">Cadastrar</a></button>
+            <button type="submit" onclick="alert('Cadastro realizado!')">Cadastrar</button>
 
             <span>Voltar para a <a href="/pagina-de-login">pagina de login</a></span>
         </form>
