--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,12 @@
 
     <main>
         <form action="/post/logar" method="POST">
+    
             <label>Usuario</label>
             <input type="text" name="usuario" placeholder="insira seu nome de usuario">
 
             <label for="">Insira sua senha</label>
-            <input type="text" name="senha" placeholder="insira sua senha">
+            <input type="password" name="senha" placeholder="insira sua senha">
 
             <button type="submit" onclick="alert('Login realizado!')">Fazer Login</button>
 
