--- a/templates/principal.html
+++ b/templates/principal.html
@@ -16,7 +16,8 @@
     <header>
         <h1>PAGINA DE COMENTARIO MORTAL</h1>
 
-        <span><a href="/pagina-de-login">Fazer login</a></span>
+        <span>Seja bem-vindo(a) {{session["nome-usuario"]}}</span>
+        <a href="/deslogar">Sair</a>
     </header>
 
     <main>
