--- a/static/css/principal.css
+++ b/static/css/principal.css
@@ -29,9 +29,21 @@ header h1 {
 
 header span {
     position: absolute; 
+    right: 70px; 
+    top: 50%; 
+    transform: translateY(-50%); 
+}
+
+header a {
+    position: absolute; 
     right: 0; 
     top: 50%; 
     transform: translateY(-50%); 
+    background-color: #faafee;
+    border-radius: 20px;
+    width: 60px;
+    text-align: center;
+    padding: 10px;
 }
 
 main {
